--- a/example/index.html
+++ b/example/index.html
@@ -139,7 +139,7 @@
             <br /><br />
               
             <a class="btn btn-block btn-success" href="" id="modelBuybasketlink" target="_blank">
-                <span class="glyphicon glyphicon-align-center"></span> 
+                <span class="glyphicon glyphicon-align-center" id="basketorcustom"></span> 
                 Info/Aggiungi al Carrello
               </a><br /><br />                                                   
               
