--- a/example/index.html
+++ b/example/index.html
@@ -141,7 +141,12 @@
             <a class="btn btn-block btn-success" href="" id="modelBuybasketlink" target="_blank">
                 <span class="glyphicon glyphicon-align-center" id="basketorcustom"></span> 
                 Info/Aggiungi al Carrello
-              </a><br /><br />                                                   
+              </a>
+	    <a class="btn btn-block btn-success" href="" id="modelBuybasketlink2" target="_blank">
+                <span class="glyphicon glyphicon-send" id="basketorcustom2"></span> 
+                Richiedi Info e Costi
+              </a>	    
+	     <br /><br />                                                   
               
             </div>
           </div>
