--- a/example/index.html
+++ b/example/index.html
@@ -134,7 +134,8 @@
             <label><input type="checkbox" id="fixed" /> Blocca posizione</label>
  <!--  -->           <br />
             <label><span class="text-muted" style="color:green" id="prez">Prezzo: </span><i><span id="modelPricetot"></span></i>
-	    <span class="text-muted" style="color:green" id="infoiva"> IVA inclusa</span>	    
+	    <span class="text-muted" style="color:green" id="infoiva"> IVA inclusa</span>
+	    <br><span class="text-muted" style="color:green" id="esperimento"></span>
 	    </label>  
             <br /><br />
               
