--- a/example/index.html
+++ b/example/index.html
@@ -143,8 +143,7 @@
                 Info/Aggiungi al Carrello
               </a>
 	    <a class="btn btn-block btn-success" href="" id="modelBuybasketlink2" target="_blank">
-              //  <span class="glyphicon glyphicon-send" id="basketorcustom2"></span> 
-		  <span class="glyphicon glyphicon-align-center" id="basketorcustom2"></span>
+            <span class="glyphicon glyphicon-send" id="basketorcustom2"></span>
                 Richiedi Info e Costi
               </a>	    
 	     <br /><br />                                                   
