--- a/example/index2.html
+++ b/example/index2.html
@@ -156,7 +156,9 @@
     var spinnerW = $( "#item-width" ).spinner();
     var spinnerH = $( "#item-height" ).spinner();
     var spinnerP = $( "#item-depth" ).spinner();
-    var primapartediurl = document.getElementById("modelBuybasketlink2").href;
+  //  var primapartediurl = document.getElementById("modelBuybasketlink2").href;
+    var nomearredo = document.getElementById("modelBuybasketlink2").innerHTML;
+    var primapartediurl = "http://mediametalli.com?Arredo="+nomearredo+"";
 
     $( "#modelBuybasketlink2" ).on( "click", function() {
       
