--- a/example/index2.html
+++ b/example/index2.html
@@ -157,7 +157,7 @@
     var spinnerH = $( "#item-height" ).spinner();
     var spinnerP = $( "#item-depth" ).spinner();
   //  var primapartediurl = document.getElementById("modelBuybasketlink2").href;
-    var nomearredo = document.getElementById("modelBuybasketlink2").innerHTML;
+    var nomearredo = document.getElementById("context-menu-name").innerHTML;
     var primapartediurl = "http://mediametalli.com?Arredo="+nomearredo+"";
 
     $( "#modelBuybasketlink2" ).on( "click", function() {
