--- a/example/index2.html
+++ b/example/index2.html
@@ -147,8 +147,8 @@
 	    <a class="btn btn-block btn-success" href="" id="modelBuybasketlink2" target="_blank">
             <span class="glyphicon glyphicon-send" id="basketorcustom2"></span>
                 Richiedi Info e Costi
-              </a>	    
-   
+              </a>
+	    <span id="namecodeitem" hidden></span>	    
    
    
 <script>
@@ -158,7 +158,7 @@
     var spinnerP = $( "#item-depth" ).spinner();
   //  var primapartediurl = document.getElementById("modelBuybasketlink2").href;
   //  var nomearredo = document.getElementById("context-menu-name").innerHTML;
-    var nomearredo = $('#context-menu-name').text(); 	  
+    var nomearredo = $('#namecodeitem').text(); 	  
     var primapartediurl = "http://mediametalli.com?Arredo="+nomearredo+"";
 
     $( "#modelBuybasketlink2" ).on( "click", function() {
