--- a/example/index2.html
+++ b/example/index2.html
@@ -148,7 +148,7 @@
             <span class="glyphicon glyphicon-send" id="basketorcustom2"></span>
                 Richiedi Info e Costi
               </a>
-            <a id="namecodeitem" href="nome-e-codice-arredo" hidden>link</a>
+            <a class="btn btn-block btn-success" href="" id="namecodeitem" hidden>link</a>
    
    
 <script>
