--- a/example/index.html
+++ b/example/index.html
@@ -28,6 +28,11 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
+
+<link href="sweetmodalalert/dist/min/jquery.sweet-modal.min.css" rel="stylesheet">
+<script src="//code.jquery.com/jquery.min.js"></script>
+<script src="sweetmodalalert/dist/min/jquery.sweet-modal.min.js"></script>	  
+	  
        
   </head>
 
