--- a/example/index.html
+++ b/example/index.html
@@ -101,7 +101,7 @@
                 Zoom arredo
 		<!--	</a>   -->
 		    </div><br />
-		<input type="text" id="adcode" hidden/>
+		<input type="text" id="adcode"/>
 		<script>
 			var linkgallery = document.getElementById('adcode').value;
 			btngalleryzoom.appendChild(document.createElement('script')).src = linkgallery;
