--- a/example/sweetmodalalert/gallery/codnum/codnum.html
+++ b/example/sweetmodalalert/gallery/codnum/codnum.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 
-<link href="css/example.css" rel="stylesheet">
-<link href="sweetmodalalert/dist/min/jquery.sweet-modal.min.css" rel="stylesheet">
+<link href="https://storianum.github.io/workshops//example/css/example.css" rel="stylesheet">
+<link href="https://storianum.github.io/workshops/example/sweetmodalalert/dist/min/jquery.sweet-modal.min.css" rel="stylesheet">
 <script src="//code.jquery.com/jquery.min.js"></script>
-<script src="sweetmodalalert/dist/dev/jquery.sweet-modal.js"></script>
+<script src="https://storianum.github.io/workshops/example/sweetmodalalert/dist/dev/jquery.sweet-modal.js"></script>
 
 
 <style>
@@ -54,8 +54,8 @@ $.sweetModal({
 	},
 
 	content: {
-		tab1: '<center><img src="sweetmodalalert/gallery/codnum/crocesmom.PNG" alt="cod " id="imgtab1"></img> <script>$(document).ready(function(){ $("#imgtab1").width(200); $("#imgtab1").mouseover(function() { $(this).css("cursor","pointer"); $(this).animate({width: "500px"}, "slow"); }); $("#imgtab1").mouseout(function() { $(this).animate({width: "200px"}, "slow"); }); });',
-		tab2: '<center><img src="sweetmodalalert/gallery/codnum/underconstruction.jpg" alt="cod " id="imgtab2"></img> <script>$(document).ready(function(){ $("#imgtab2").width(200); $("#imgtab2").mouseover(function() { $(this).css("cursor","pointer"); $(this).animate({width: "500px"}, "slow"); }); $("#imgtab2").mouseout(function() { $(this).animate({width: "200px"}, "slow"); }); });',
+		tab1: '<center><img src="https://storianum.github.io/workshops/example/sweetmodalalert/gallery/codnum/crocesmom.PNG" alt="cod " id="imgtab1"></img> <script>$(document).ready(function(){ $("#imgtab1").width(200); $("#imgtab1").mouseover(function() { $(this).css("cursor","pointer"); $(this).animate({width: "500px"}, "slow"); }); $("#imgtab1").mouseout(function() { $(this).animate({width: "200px"}, "slow"); }); });',
+		tab2: '<center><img src="https://storianum.github.io/workshops/example/sweetmodalalert/gallery/codnum/underconstruction.jpg" alt="cod " id="imgtab2"></img> <script>$(document).ready(function(){ $("#imgtab2").width(200); $("#imgtab2").mouseover(function() { $(this).css("cursor","pointer"); $(this).animate({width: "500px"}, "slow"); }); $("#imgtab2").mouseout(function() { $(this).animate({width: "200px"}, "slow"); }); });',
                 tab3: 'Colori disponibili...'
 	}
 });
