--- a/example/sweetmodalalert/gallery/codnum/codnum.html
+++ b/example/sweetmodalalert/gallery/codnum/codnum.html
@@ -4,7 +4,7 @@
 
 <link href="https://storianum.github.io/workshops//example/css/example.css" rel="stylesheet">
 <link href="https://storianum.github.io/workshops/example/sweetmodalalert/dist/min/jquery.sweet-modal.min.css" rel="stylesheet">
-<script src="//code.jquery.com/jquery.min.js"></script>
+<script src="http://code.jquery.com/jquery.min.js"></script>
 <script src="https://storianum.github.io/workshops/example/sweetmodalalert/dist/dev/jquery.sweet-modal.js"></script>
 
 
