--- a/example/indexz0123.html
+++ b/example/indexz0123.html
@@ -25,6 +25,8 @@
     <script src="js/zexample0123.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
        
   </head>
