--- a/example/zonlypaindex.html
+++ b/example/zonlypaindex.html
@@ -69,7 +69,7 @@ div.ciao {
             -->
 
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
-  ImgJpg
+<span class="glyphicon glyphicon-screenshot"></span>                  <!--  ImgJpg -->
 </a>  
 <script>
   $('#save_image_locally').click(function(){
