--- a/example/zfloor2.html
+++ b/example/zfloor2.html
@@ -32,6 +32,8 @@
     <script src="js/zfloor2.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
     
 <style>
