--- a/example/index.html
+++ b/example/index.html
@@ -101,7 +101,7 @@
 		
               
               
-            <div class="panel panel-default">
+            <div class="panel panel-default" id="panelcustomitem">
               <div class="panel-heading" id="contentdimens">Varia Dimensione</div>
               <div class="panel-body" style="color: #333333">
 
