--- a/example/index.html
+++ b/example/index.html
@@ -451,7 +451,7 @@
 		      
 		      
 		<div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/transparentbackg.png" texture-stretch="false" texture-scale="100">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="models/js/finestra_scorrevole.js" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail light brick" src="rooms/thumbnails/boooh.jpg" />
                   </a>
 		  <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
