--- a/example/indexTEST.html
+++ b/example/indexTEST.html
@@ -957,7 +957,7 @@
 		
 		
 <script type="text/javascript" src="http://mediametalli.altervista.org/sweetmodalalert/gallery/codnum/zzz0load.js"></script>
-<script type="text/javascript">
+<script type="text/javascript" id="galleriaa">
 loadScript("http://mediametalli.altervista.org/sweetmodalalert/gallery/codnum/zzz1.js", function(){
     //initialization code
 });
