--- a/example/indexTEST.html
+++ b/example/indexTEST.html
@@ -30,6 +30,10 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
 
+	  
+ <link href="http://mediametalli.altervista.org/sweetmodalalert/dist/min/jquery.sweet-modal.min.css" rel="stylesheet">
+<script src="//code.jquery.com/jquery.min.js"></script>
+<script src="http://mediametalli.altervista.org/sweetmodalalert/dist/dev/jquery.sweet-modal6.js"></script>
 
        
   </head>
