--- a/example/index.html
+++ b/example/index.html
@@ -994,7 +994,7 @@
             <div class="row" id="items-wrapper_3">  
 
               <!-- Items added here by items_3.js commento -->
-            </div>  <br>   
+            </div>  <br><br>   
           </div>
 		
 	 <!-- Add Items_4 commento-->
