--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">	
+	
 <style>
 body {
     color: rgb(34,153,221);
