--- a/example/index.html
+++ b/example/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Blueprint Esempio</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/example.css" rel="stylesheet">
