--- a/example/index.html
+++ b/example/index.html
@@ -483,6 +483,31 @@
             <div class="panel panel-default">
               <div class="panel-heading">Cambia Tipo di Parete</div>
               <div class="panel-body" style="color: #333333">
+		      
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/grigioazzurro.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail marbletiles" src="rooms/thumbnails/thumbnail_grigioazzurro.jpg" />
+                  </a>
+		  <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
+                </div>
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/grigiogiallo.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail marbletiles" src="rooms/thumbnails/thumbnail_grigiogiallo.jpg" />
+                  </a>
+		  <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
+                </div>
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/grigiorosso.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail marbletiles" src="rooms/thumbnails/thumbnail_grigiorosso.jpg" />
+                  </a>
+		  <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
+                </div>
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/grigioverde.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail marbletiles" src="rooms/thumbnails/thumbnail_grigioverde.jpg" />
+                  </a>
+		  <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
+                </div> 
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/marbletiles.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail marbletiles" src="rooms/thumbnails/thumbnail_marbletiles.jpg" />
