--- a/example/index.html
+++ b/example/index.html
@@ -486,25 +486,25 @@
 		      
 		<div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/grigioazzurro.jpg" texture-stretch="true" texture-scale="">
-                    <img alt="Thumbnail marbletiles" src="rooms/thumbnails/thumbnail_grigioazzurro.jpg" />
+                    <img alt="Thumbnail grigioazzurro" src="rooms/thumbnails/thumbnails_grigioazzurro.jpg" />
                   </a>
 		  <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
 		<div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/grigiogiallo.jpg" texture-stretch="true" texture-scale="">
-                    <img alt="Thumbnail marbletiles" src="rooms/thumbnails/thumbnail_grigiogiallo.jpg" />
+                    <img alt="Thumbnail grigiogiallo" src="rooms/thumbnails/thumbnails_grigiogiallo.jpg" />
                   </a>
 		  <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
 		<div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/grigiorosso.jpg" texture-stretch="true" texture-scale="">
-                    <img alt="Thumbnail marbletiles" src="rooms/thumbnails/thumbnail_grigiorosso.jpg" />
+                    <img alt="Thumbnail grigiorosso" src="rooms/thumbnails/thumbnails_grigiorosso.jpg" />
                   </a>
 		  <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
 		<div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/grigioverde.jpg" texture-stretch="true" texture-scale="">
-                    <img alt="Thumbnail marbletiles" src="rooms/thumbnails/thumbnail_grigioverde.jpg" />
+                    <img alt="Thumbnail grigioverde" src="rooms/thumbnails/thumbnails_grigioverde.jpg" />
                   </a>
 		  <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div> 
