--- a/example/index.html
+++ b/example/index.html
@@ -148,7 +148,7 @@
               
             <a class="btn btn-block btn-success" href="" id="modelBuybasketlink" target="_blank">
                 <span class="glyphicon glyphicon-align-center" id="basketorcustom"></span> 
-                Info/Aggiungi al Carrello
+                Altri Dettagli o Compra
               </a>
 	    <a class="btn btn-block btn-success" href="" id="modelBuybasketlink2" target="_blank">
             <span class="glyphicon glyphicon-send" id="basketorcustom2"></span>
