--- a/example/index.html
+++ b/example/index.html
@@ -920,19 +920,19 @@
           <div id="viewer">
 
             <div id="main-controls">
-              <a href="#" class="btn btn-default btn-sm" id="new">
+              <a href="#" class="btn btn-default btn-sm" id="new" title="Nuovo Progetto">
               <span class="glyphicon glyphicon-refresh"></span>       <!-- Nuovo  -->
               </a>
-              <a href="#" class="btn btn-default btn-sm" id="saveFile">
+              <a href="#" class="btn btn-default btn-sm" id="saveFile" title="Salva progetto su File">
               <span class="glyphicon glyphicon-download-alt"></span>   <!--  Salva -->
               </a>
               <a class="btn btn-sm btn-default btn-file">
             <!--   <input type="file" class="hidden-input" id="loadFile">  -->
-              <span class="glyphicon glyphicon-folder-open"><input type="file" class="hidden-input" id="loadFile"></span>  <!-- Carica -->
+              <span class="glyphicon glyphicon-folder-open"><input type="file" class="hidden-input" id="loadFile" title="Carica il file del progetto"></span>  <!-- Carica -->
               </a>
             
 
-<a href="#" class="btn btn-default btn-sm" id="save_image_locally">
+<a href="#" class="btn btn-default btn-sm" id="save_image_locally" title="Salva immagine del progetto">
 <span class="glyphicon glyphicon-screenshot"></span>                  <!--  ImgJpg -->
 </a>  
 <script>
