--- a/example/index.html
+++ b/example/index.html
@@ -920,20 +920,20 @@
           <div id="viewer">
 
             <div id="main-controls">
-              <a href="#" class="btn btn-default btn-sm" id="new" title="Nuovo Progetto">
-              <span class="glyphicon glyphicon-refresh"></span>       <!-- Nuovo  -->
+              <a href="#" class="btn btn-default btn-sm" id="new">
+              <span class="glyphicon glyphicon-refresh" title="Nuovo Progetto"></span>       <!-- Nuovo  -->
               </a>
-              <a href="#" class="btn btn-default btn-sm" id="saveFile" title="Salva progetto su File">
-              <span class="glyphicon glyphicon-download-alt"></span>   <!--  Salva -->
+              <a href="#" class="btn btn-default btn-sm" id="saveFile">
+              <span class="glyphicon glyphicon-download-alt" title="Salva progetto su File"></span>   <!--  Salva -->
               </a>
               <a class="btn btn-sm btn-default btn-file">
             <!--   <input type="file" class="hidden-input" id="loadFile">  -->
-              <span class="glyphicon glyphicon-folder-open"><input type="file" class="hidden-input" id="loadFile" title="Carica il file del progetto"></span>  <!-- Carica -->
+              <span class="glyphicon glyphicon-folder-open" title="Carica il file del progetto"><input type="file" class="hidden-input" id="loadFile"></span>  <!-- Carica -->
               </a>
             
 
-<a href="#" class="btn btn-default btn-sm" id="save_image_locally" title="Salva immagine del progetto">
-<span class="glyphicon glyphicon-screenshot"></span>                  <!--  ImgJpg -->
+<a href="#" class="btn btn-default btn-sm" id="save_image_locally">
+<span class="glyphicon glyphicon-screenshot" title="Salva immagine del progetto"></span>                  <!--  ImgJpg -->
 </a>  
 <script>
   $('#save_image_locally').click(function(){
