--- a/example/mindex.html
+++ b/example/mindex.html
@@ -943,7 +943,7 @@
     html2canvas($('#imagesave'), 
     {
       onrendered: function (canvas) {  
-       var a = document.createElement('a');
+       var a = $('#download').get(0);
         // toDataURL defaults to png, so we need to request a jpeg, then convert for file download.
         a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
         a.download = 'myfilename.jpg';
