--- a/example/mindex.html
+++ b/example/mindex.html
@@ -936,6 +936,7 @@
             
 
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
+<a href="" id='download'></a>	
 <span class="glyphicon glyphicon-screenshot" title="Salva immagine del progetto"></span>                  <!--  ImgJpg -->
 </a>  
 <script>
