--- a/example/arx7.html
+++ b/example/arx7.html
@@ -186,10 +186,14 @@
 
           <!-- Floor textures INVISIBLE-->
           <div id="floorTexturesDiv" style="margin: 0 20px">
+		  <div class="col-sm-6" style="padding: 3px">
+                  </div>
           </div>
 
           <!-- Wall Textures INVISIBLE-->
           <div id="wallTextures" style="margin: 0 20px">
+		  <div class="col-sm-6" style="padding: 3px">
+                  </div>
           </div>
 	      
 	      
