--- a/example/arx11.html
+++ b/example/arx11.html
@@ -230,10 +230,7 @@
               <a href="#" class="btn btn-default btn-sm" id="saveFile">
               <span class="glyphicon glyphicon-download-alt" title="Salva progetto su File"></span>   <!--  Salva -->
               </a>
-              <a class="btn btn-sm btn-default btn-file">
-            <!--   <input type="file" class="hidden-input" id="loadFile">  -->
-              <span class="glyphicon glyphicon-folder-open" title="Carica il file del progetto"><input type="file" class="hidden-input" id="loadFile"></span>  <!-- Carica -->
-              </a>
+              
             
 
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
@@ -303,7 +300,7 @@
             </div>
 
             <div id="loading-modal">
-              <h1>Caricamento Stanza di Esempio...</h1>  
+              <h1>Caricamento ...</h1>  
             </div>
           </div>
 
