--- a/example/arx13.html
+++ b/example/arx13.html
@@ -43,7 +43,15 @@
         <div class="col-xs-3 sidebar">
           <!-- Main Navigation -->
           <ul class="nav nav-sidebar">
-            <li id="items_tab_0"><a href="#">
+            <li id="floorplan_tab"><a href="#">
+              Edita Pianta
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+            </a></li>
+            <li id="design_tab"><a href="#">
+              Progetto in Corso
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+            </a></li>
+	    <li id="items_tab_0"><a href="#">
               Complementi di Progetto
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
