Update and rename arx14.html to arx15.html

--- a/example/arx15.html
+++ b/example/arx15.html
@@ -283,11 +283,25 @@
             <canvas id="floorplanner-canvas"></canvas>
             <div id="floorplanner-controls">
 
-              
+              <button id="move" class="btn btn-sm btn-default">
+                <span class="glyphicon glyphicon-move"></span>
+                Muovi Parete
+              </button>
+              <button id="draw" class="btn btn-sm btn-default">
+                <span class="glyphicon glyphicon-pencil"></span>
+                Disegna Parete
+              </button>
+              <button id="delete" class="btn btn-sm btn-default">
+                <span class="glyphicon glyphicon-remove"></span>
+                Cancella Parete
+              </button>
+              <span class="pull-right">
+                <button class="btn btn-primary btn-sm" id="update-floorplan">Fine &raquo;</button>
+              </span>
 
             </div>
             <div id="draw-walls-hint">
-              Premi tasto "Esc" per finire 
+              Premi tasto "Esc" per finire disegno pareti
             </div>
           </div>
 		
