--- a/example/arx19.html
+++ b/example/arx19.html
@@ -43,11 +43,11 @@
         <div class="col-xs-3 sidebar">
           <!-- Main Navigation -->
           <ul class="nav nav-sidebar">
-            <li id="floorplan_tab"><a href="#">
+            <li id="floorplan_tab" style="display:none"><a href="#">
               Edita Pianta
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
-            <li id="design_tab"><a href="#">
+            <li id="design_tab" style="display:none"><a href="#">
               Progetto in Corso
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
