--- a/example/barx22.html
+++ b/example/barx22.html
@@ -1,6 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
+	  
+    <meta name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0'>
+<!-- three.js library -->
+<script src='https://storianum.github.io/mobrea/three.js/examples/vendor/three.js/build/three.js'></script>
+<script src='https://storianum.github.io/mobrea/three.js/examples/vendor/three.js/examples/js/libs/stats.min.js'></script>
+<!-- jsartookit -->
+<script src='../../../vendor/jsartoolkit5/build/artoolkit.min.js'></script>
+<script src='../../../vendor/jsartoolkit5/js/artoolkit.api.js'></script>
+<!-- aruco -->
+<script src='../../../vendor/js-aruco/src/svd.js'></script> 
+<script src='../../../vendor/js-aruco/src/posit1.js'></script> 
+<script src='../../../vendor/js-aruco/src/cv.js'></script> 
+<script src='../../../vendor/js-aruco/src/aruco.js'></script> 
+<script src='../../../src/threex/threex-aruco/threex-arucocontext.js'></script> 
+<script src='../../../src/threex/threex-aruco/threex-arucodebug.js'></script>
+<!-- include threex.artoolkit -->
+<script src='../../../src/threex/threex-artoolkitsource.js'></script>
+<script src='../../../src/threex/threex-artoolkitcontext.js'></script>
+<script src='../../../src/threex/threex-artoolkitprofile.js'></script>
+<script src='../../../src/threex/threex-arbasecontrols.js'></script>
+<script src='../../../src/threex/threex-armarkercontrols.js'></script>
+<script src='../../../src/threex/threex-armarkerhelper.js'></script>
+<script src='../../../src/threex/threex-arsmoothedcontrols.js'></script>
+<script>THREEx.ArToolkitContext.baseURL = '../../../'</script>
+
+<script src='../threex-armultimarkerutils.js'></script>
+<script src='../threex-armultimarkercontrols.js'></script>
+<script src='../threex-armultimarkerlearning.js'></script>  
+	  
     <title>Blueprint Esempio</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
