--- a/example/barx22.html
+++ b/example/barx22.html
@@ -7,15 +7,15 @@
 <script src='https://storianum.github.io/mobrea/three.js/examples/vendor/three.js/build/three.js'></script>
 <script src='https://storianum.github.io/mobrea/three.js/examples/vendor/three.js/examples/js/libs/stats.min.js'></script>
 <!-- jsartookit -->
-<script src='../../../vendor/jsartoolkit5/build/artoolkit.min.js'></script>
-<script src='../../../vendor/jsartoolkit5/js/artoolkit.api.js'></script>
+<script src='https://storianum.github.io/mobrea/three.js/vendor/jsartoolkit5/build/artoolkit.min.js'></script>
+<script src='https://storianum.github.io/mobrea/three.js/vendor/jsartoolkit5/js/artoolkit.api.js'></script>
 <!-- aruco -->
-<script src='../../../vendor/js-aruco/src/svd.js'></script> 
-<script src='../../../vendor/js-aruco/src/posit1.js'></script> 
-<script src='../../../vendor/js-aruco/src/cv.js'></script> 
-<script src='../../../vendor/js-aruco/src/aruco.js'></script> 
-<script src='../../../src/threex/threex-aruco/threex-arucocontext.js'></script> 
-<script src='../../../src/threex/threex-aruco/threex-arucodebug.js'></script>
+<script src='https://storianum.github.io/mobrea/three.js/vendor/js-aruco/src/svd.js'></script> 
+<script src='https://storianum.github.io/mobrea/three.js/vendor/js-aruco/src/posit1.js'></script> 
+<script src='https://storianum.github.io/mobrea/three.js/vendor/js-aruco/src/cv.js'></script> 
+<script src='https://storianum.github.io/mobrea/three.js/vendor/js-aruco/src/aruco.js'></script> 
+<script src='https://storianum.github.io/mobrea/mobrea/three.js/src/threex/threex-aruco/threex-arucocontext.js'></script> 
+<script src='https://storianum.github.io/mobrea/mobrea/three.js/src/threex/threex-aruco/threex-arucodebug.js'></script>
 <!-- include threex.artoolkit -->
 <script src='../../../src/threex/threex-artoolkitsource.js'></script>
 <script src='../../../src/threex/threex-artoolkitcontext.js'></script>
