--- a/example/barx22.html
+++ b/example/barx22.html
@@ -17,18 +17,18 @@
 <script src='https://storianum.github.io/mobrea/mobrea/three.js/src/threex/threex-aruco/threex-arucocontext.js'></script> 
 <script src='https://storianum.github.io/mobrea/mobrea/three.js/src/threex/threex-aruco/threex-arucodebug.js'></script>
 <!-- include threex.artoolkit -->
-<script src='../../../src/threex/threex-artoolkitsource.js'></script>
-<script src='../../../src/threex/threex-artoolkitcontext.js'></script>
-<script src='../../../src/threex/threex-artoolkitprofile.js'></script>
-<script src='../../../src/threex/threex-arbasecontrols.js'></script>
-<script src='../../../src/threex/threex-armarkercontrols.js'></script>
-<script src='../../../src/threex/threex-armarkerhelper.js'></script>
-<script src='../../../src/threex/threex-arsmoothedcontrols.js'></script>
+<script src='https://storianum.github.io/mobrea/mobrea/three.js/src/threex/threex-artoolkitsource.js'></script>
+<script src='https://storianum.github.io/mobrea/mobrea/three.js/src/threex/threex-artoolkitcontext.js'></script>
+<script src='https://storianum.github.io/mobrea/mobrea/three.js/src/threex/threex-artoolkitprofile.js'></script>
+<script src='https://storianum.github.io/mobrea/mobrea/three.js/src/threex/threex-arbasecontrols.js'></script>
+<script src='https://storianum.github.io/mobrea/mobrea/three.js/src/threex/threex-armarkercontrols.js'></script>
+<script src='https://storianum.github.io/mobrea/mobrea/three.js/src/threex/threex-armarkerhelper.js'></script>
+<script src='https://storianum.github.io/mobrea/mobrea/three.js/src/threex/threex-arsmoothedcontrols.js'></script>
 <script>THREEx.ArToolkitContext.baseURL = '../../../'</script>
 
-<script src='../threex-armultimarkerutils.js'></script>
-<script src='../threex-armultimarkercontrols.js'></script>
-<script src='../threex-armultimarkerlearning.js'></script>  
+<script src='https://storianum.github.io/mobrea/three.js/examples/multi-markers/threex-armultimarkerutils.js'></script>
+<script src='https://storianum.github.io/mobrea/three.js/examples/multi-markers/threex-armultimarkercontrols.js'></script>
+<script src='https://storianum.github.io/mobrea/three.js/examples/multi-markers/threex-armultimarkerlearning.js'></script>  
 	  
     <title>Blueprint Esempio</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
