Update and rename zcarx.html to zcarx2.html

--- a/example/zcarx2.html
+++ b/example/zcarx2.html
@@ -43,6 +43,8 @@
 
 <!-- start the body of your page -->
 <body style='margin : 0px; overflow: hidden;'>
+	
+	<div style='position: fixed; top: 0px;'>
 
 <div class="container-fluid">
       <div class="row main-row">
@@ -360,7 +362,7 @@
 
 
 
-
+	</div>
 
 
 
