Update and rename zcarx2.html to zcarx3.html

--- a/example/zcarx3.html
+++ b/example/zcarx3.html
@@ -44,7 +44,9 @@
 <!-- start the body of your page -->
 <body style='margin : 0px; overflow: hidden;'>
 	
-	<div style='position: fixed; top: 0px;'>
+	<!--  <div style='position: fixed; top: 0px;'> -->
+	
+	<div style='top: 0px'>
 
 <div class="container-fluid">
       <div class="row main-row">
