Update and rename zcarx3.html to zcarx4.html

--- a/example/zcarx4.html
+++ b/example/zcarx4.html
@@ -46,7 +46,7 @@
 	
 	<!--  <div style='position: fixed; top: 0px;'> -->
 	
-	<div style='top: 0px'>
+	<div style='position: initial; top: 0px;'>
 
 <div class="container-fluid">
       <div class="row main-row">
