Update and rename zcarx4.html to zcarx5.html

--- a/example/zcarx5.html
+++ b/example/zcarx5.html
@@ -44,9 +44,9 @@
 <!-- start the body of your page -->
 <body style='margin : 0px; overflow: hidden;'>
 	
-	<!--  <div style='position: fixed; top: 0px;'> -->
 	
-	<div style='position: initial; top: 0px;'>
+	
+	<div style='position: fixed; width:100%; top: 0px;'>
 
 <div class="container-fluid">
       <div class="row main-row">
