--- a/example/zcarx6.html
+++ b/example/zcarx6.html
@@ -46,7 +46,7 @@
 	
 	
 	
-	<div style='position: fixed; width:100%; top: 0px;'>
+	<div style='position: initial; width:100%; top: 0px;'>
 
 <div class="container-fluid">
       <div class="row main-row">
