--- a/example/zcarx8.html
+++ b/example/zcarx8.html
@@ -46,7 +46,7 @@
 	
 	
 	
-	<div style='position: relative; width:100%; top: 0px;'>
+	<div style='position: fixed; width:100%; top: 0px; z-index: 1;'>
 
 <div class="container-fluid">
       <div class="row main-row">
