Update and rename zcarx10.html to zcarx11.html

--- a/example/zcarx11.html
+++ b/example/zcarx11.html
@@ -227,7 +227,8 @@
         <!-- Right Column -->
         <div class="col-xs-9 main">    <div id="imagesave">
 
-          
+        <!-- 3D Viewer -->
+          <div id="viewer">  
 
             <div id="main-controls">
               <a href="#" class="btn btn-default btn-sm" id="new">
