--- a/example/zcarx14.html
+++ b/example/zcarx14.html
@@ -62,7 +62,7 @@
               Progetto in Corso
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
-	    <li id="items_tab_0"><a href="#">
+	    <li id="items_tab_0bis" style="display:none"><a href="#">
               Complementi di Progetto
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
@@ -298,10 +298,10 @@
 		
 		
 	  <!-- Add Items_0 commento-->
-          <div id="add-items_0">   
-            <div class="row" id="items-wrapper_0">  
+          <div id="add-items_0mob">   
+            <div class="row" id="items-wrapper_0mob">  
 
-              <!-- Items added here by items_0.js commento -->
+              <!-- Items added here by items_0mob.js commento -->
             </div> <br><br>   
           </div>
 		
