--- a/example/zcarx14.html
+++ b/example/zcarx14.html
@@ -62,7 +62,7 @@
               Progetto in Corso
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
-	    <li id="items_tab_0bis" style="display:none"><a href="#">
+	    <li id="items_tab_0mob" style="display:none"><a href="#">
               Complementi di Progetto
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
