--- a/example/zcarx14.html
+++ b/example/zcarx14.html
@@ -15,6 +15,7 @@
 
     <script src="js/items.js"></script>
     
+    <script src="js/items_0mob.js"></script>
     <script src="js/items_0.js"></script>  
     <script src="js/items_1.js"></script>
     <script src="js/items_2.js"></script>
