--- a/example/zcarx14.html
+++ b/example/zcarx14.html
@@ -298,7 +298,7 @@
           </div>
 		
 		
-	  <!-- Add Items_0 commento-->
+	  <!-- Add Items_0mob commento-->
           <div id="add-items_0mob">   
             <div class="row" id="items-wrapper_0mob">  
 
