--- a/example/zcarx20.html
+++ b/example/zcarx20.html
@@ -23,7 +23,7 @@
     <script src="js/items_4.js"></script>
     <script src="js/items_5.js"></script>
     
-    <script src="js/zcarxexample5.js"></script>
+    <script src="js/zcarxexample6.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -59,11 +59,11 @@
               Edita Pianta
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
-            <li id="design_tab" style="display:none"><a href="#">
+            <li id="design_tab"><a href="#">
               Progetto in Corso
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
-	    <li id="items_tab_0mob" style="display:none"><a href="#">
+	    <li id="items_tab_0" style="display:none"><a href="#">
               Complementi di Progetto
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
