--- a/example/zcarx21.html
+++ b/example/zcarx21.html
@@ -1,4 +1,7 @@
   <html><head>
+	  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  
     <title>Blueprint Esempio</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
