--- a/example/bingobongo.html
+++ b/example/bingobongo.html
@@ -33,6 +33,10 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
 
+    <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+    <script src="../bundle.js"></script>
+    <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
+  
 
        
   </head>
