--- a/example/zmesker.html
+++ b/example/zmesker.html
@@ -371,22 +371,20 @@
 
 	</div>
 
-
+<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+<script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
 
 	<!-- Define your 3d scene and enabled ar.js -->
-	<a-scene embedded arjs='trackingMethod: best;'>
+	<a-scene embedded arjs='sourceType: webcam;'>
+		
+		<a-assets>
+                        <a-asset-item id="ship-obj" src="ship_model/ship.obj"></a-asset-item>
+                        <a-asset-item id="ship-mtl" src="ship_model/ship.mtl"></a-asset-item>
+                </a-assets>
+                <!-- Using the asset management system. -->
+                <a-entity obj-model="obj: #ship-obj; mtl: #ship-mtl"></a-entity>
 
-		<!-- Create a anchor to attach your augmented reality -->
-		<a-anchor hit-testing-enabled='true'>
-
-			<!-- Add your augmented reality here -->
-			<a-box position='0 0.5 0' material='opacity: 0.5; side:double; color:red;'>
-				<a-torus-knot radius='0.26' radius-tubular='0.05'>
-					<a-animation attribute="rotation" to="360 0 0" dur="5000" easing='linear' repeat="indefinite"></a-animation>
-				</a-torus-knot>
-			</a-box>
-
-		</a-anchor>
+		
 
 		<!-- Define a static camera -->
 		<a-camera-static/>
