--- a/example/zmesker1.html
+++ b/example/zmesker1.html
@@ -378,8 +378,8 @@
 	<a-scene embedded arjs='sourceType: webcam;'>
 		
 		<a-assets>
-                        <a-asset-item id="ship-obj" src="ship_model/ship.obj"></a-asset-item>
-                        <a-asset-item id="ship-mtl" src="ship_model/ship.mtl"></a-asset-item>
+                        <a-asset-item id="ship-obj" src="https://storianum.github.io/workshops/example/Rock1.obj"></a-asset-item>
+                        <a-asset-item id="ship-mtl" src="https://storianum.github.io/workshops/example/Rock1.mtl"></a-asset-item>
                 </a-assets>
                 <!-- Using the asset management system. -->
                 <a-entity obj-model="obj: #ship-obj; mtl: #ship-mtl"></a-entity>
