Update and rename zmesker1.html to zmesker2.html

--- a/example/zmesker2.html
+++ b/example/zmesker2.html
@@ -386,8 +386,8 @@
 
 		
 
-		<!-- Define a static camera -->
-		<a-camera-static/>
+		<!-- Define a static camera
+		<a-camera-static/>   -->
 
 	</a-scene>
 </body></html>
