--- a/example/zmesker3.html
+++ b/example/zmesker3.html
@@ -382,7 +382,7 @@
                         <a-asset-item id="ship-mtl" src="https://storianum.github.io/workshops/example/Rock1.mtl"></a-asset-item>
                 </a-assets>
                 <!-- Using the asset management system. -->
-                <a-entity obj-model="obj: #ship-obj; mtl: #ship-mtl"></a-entity>
+                <a-entity obj-model="obj: #ship-obj; mtl: #ship-mtl" scale="0.01 0.01 0.01"></a-entity>
 
 		
 
