--- a/example/zmesker4.html
+++ b/example/zmesker4.html
@@ -371,23 +371,23 @@
 
 	</div>
 
-<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-<script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
+<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
 	<!-- Define your 3d scene and enabled ar.js -->
 	<a-scene embedded arjs='sourceType: webcam;'>
-		
-		<a-assets>
-                        <a-asset-item id="ship-obj" src="https://storianum.github.io/workshops/example/Rock1.obj"></a-asset-item>
-                        <a-asset-item id="ship-mtl" src="https://storianum.github.io/workshops/example/Rock1.mtl"></a-asset-item>
-                </a-assets>
-                <!-- Using the asset management system. -->
-                <a-entity obj-model="obj: #ship-obj; mtl: #ship-mtl" scale="0.01 0.01 0.01"></a-entity>
-
-		
-
-		<!-- Define a static camera
-		<a-camera-static/>   -->
-
-	</a-scene>
+      <a-marker preset='hiro'>
+        <!-- Adding an OBJ file to an AR Project-->
+        <a-entity 
+            obj-model="obj: url(https://storianum.github.io/workshops/example/Rock1.obj); 
+            mtl: url(https://storianum.github.io/workshops/example/Rock1.mtl)">
+        </a-entity>
+              
+      </a-marker>
+  <a-entity camera>
+  </a-entity>
+  </a-scene>
+	
+	
+	
 </body></html>
