--- a/example/zmesker5.html
+++ b/example/zmesker5.html
@@ -374,19 +374,17 @@
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
-	<!-- Define your 3d scene and enabled ar.js -->
-	<a-scene embedded arjs='sourceType: webcam;'>
-      <a-marker preset='hiro'>
-        <!-- Adding an OBJ file to an AR Project-->
-        <a-entity 
-            obj-model="obj: url(https://storianum.github.io/workshops/example/Rock1.obj); 
-            mtl: url(https://storianum.github.io/workshops/example/Rock1.mtl)">
-        </a-entity>
-              
-      </a-marker>
-  <a-entity camera>
-  </a-entity>
-  </a-scene>
+	<a-scene>
+    <a-assets>
+           <a-asset-item id="moore-obj" src="https://storianum.github.io/workshops/example/Rock1.obj"></a-asset-item>
+           <a-asset-item id="moore-mtl" src="https://storianum.github.io/workshops/example/Rock1.mtl"></a-asset-item>
+     </a-assets>
+     <a-entity
+          obj-model="obj: #moore-obj; mtl: #moore-mtl"
+          scale="1 1 1"
+          rotation="0 0 0"
+          position="1 1 1"></a-entity>
+ </a-scene>
 	
 	
 	
