--- a/example/zmesker6.html
+++ b/example/zmesker6.html
@@ -12,7 +12,7 @@
         <a-asset-item id="tree-obj" src="Rock1.obj"></a-asset-item>
         <a-asset-item id="tree-mtl" src="Rock1.mtl"></a-asset-item>
       </a-assets>
-      <a-entity obj-model="obj: #tree-obj; mtl: #tree-mtl"></a-entity>
+      <a-entity obj-model="obj: #tree-obj; mtl: #tree-mtl" scale="0.001 0.001 0.001"></a-entity>
     </a-scene>
 
     </body>
