--- a/example/zmesker8.html
+++ b/example/zmesker8.html
@@ -4,7 +4,7 @@
         <title>o</title>
         <meta charset="utf-8">
    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-<script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
+<!-- <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script> -->
 	    </head>
 <body style='margin : 0px; overflow: hidden;'>
 	
