--- a/example/zmesker9.html
+++ b/example/zmesker9.html
@@ -9,7 +9,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 	
 	
-    <a-scene>
+    <a-scene embedded arjs=’sourceType: webcam;’>
   <a-assets>
     <a-asset-item id="brainstem" src="https://cdn.aframe.io/test-models/models/brainstem/BrainStem.gltf"></a-asset-item>
   </a-assets>
