Update and rename zyuppidu.html to zyuppidu1.html

--- a/example/zyuppidu1.html
+++ b/example/zyuppidu1.html
@@ -19,7 +19,7 @@
       <a-asset-item id="avocado" src="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/1.0/SmilingFace/glTF/SmilingFace.gltf"></a-asset-item>
     </a-assets>
 
-    <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.1 0.1 0.1" position="0 1 0"></a-entity>
+    <a-entity gltf-model="#avocado" look-controls="touchEnabled:true" scale="0.1 0.1 0.1" position="0 1 0"></a-entity>
 
  
     
