Update and rename zyuppidu3.html to zyuppidu4.html

--- a/example/zyuppidu4.html
+++ b/example/zyuppidu4.html
@@ -342,7 +342,7 @@
 
 	</div>
 
-
+	</div>
   
 
   <a-scene>
@@ -358,7 +358,7 @@
     </a-assets>
 
     <a-entity gltf-model="#avocado" look-controls="touchEnabled:true" scale="0.1 0.1 0.1" position="0 1 0"></a-entity> 
-  
+  </a-scene>
   
   
 </body></html>
