Update and rename marblet1.html to marblet2.html

--- a/example/marblet2.html
+++ b/example/marblet2.html
@@ -8,6 +8,7 @@
   <script>
     registerAframeClickDragComponent(window.AFRAME);
   </script>
+ 
 
 </head>
 <body>
@@ -23,7 +24,7 @@
       <a-asset-item id="avocado" src="https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/9176d098/1.0/Avocado/glTF/Avocado.gltf"></a-asset-item>
     </a-assets>
 
-    <a-entity gltf-model="#avocado" look-controls="enabled:false" scale="0.1 0.1 0.1" position="0 1 0" click-drag></a-entity>
+    <a-entity gltf-model="#avocado" look-controls="enabled:false" scale="0.1 0.1 0.1" position="0 1 0" click-drag keyboard-controls="mode: fps"></a-entity>
 
  
     
