--- a/example/propeller.html
+++ b/example/propeller.html
@@ -4,13 +4,15 @@
   <title>So I heard millenials love Avocados...</title>
   <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
   <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
+  <script src="https://rawgit.com/mayognaise/aframe-drag-look-controls-component/master/dist/aframe-drag-look-controls-component.min.js"></script>
+
 
 </head>
 <body>
   <a-scene>
     <!-- this is the "stage" of your 3D content -->
 
-    <a-entity camera="" position="0 1.6 5"></a-entity> <!-- We move the camera around a bit -->
+    <a-entity camera="" position="0 1.6 5" drag-look-controls></a-entity> <!-- We move the camera around a bit -->
     <a-entity light="type:directional;castShadow:true" position="0 10 0"></a-entity> <!-- Have a light shining down on our scene -->
     <a-entity light="type:ambient; intensity:0.5"></a-entity> <!-- and some ambient lighting -->
 
