Update and rename zapoterk.html to zapoterk1.html

--- a/example/zapoterk1.html
+++ b/example/zapoterk1.html
@@ -4,7 +4,7 @@
   <title>So I heard millenials love Avocados...</title>
   <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
   <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
-  <script src="https://raw.githubusercontent.com/donmccurdy/aframe-extras/master/src/loaders/object-model.js"></script>
+  <script src="https://raw.githubusercontent.com/donmccurdy/aframe-extras/master/src/loaders/json-model.js"></script>
 
 </head>
 <body>
@@ -16,7 +16,7 @@
     <a-entity light="type:ambient; intensity:0.5"></a-entity> <!-- and some ambient lighting -->
 
 
- <a-entity scale="0.1 0.1 0.1" look-controls="reverseMouseDrag:true" position="0 1 0" object-model="src: url(https://raw.githubusercontent.com/StoriaNum/workshops/gh-pages/example/models/js/68_700AM.js);">
+ <a-entity scale="0.1 0.1 0.1" look-controls="reverseMouseDrag:true" position="0 1 0" json-model="src: url(https://raw.githubusercontent.com/StoriaNum/workshops/gh-pages/example/models/js/68_700AM.js);">
 </a-entity>
     
     </a-scene>
