--- a/example/zapoterk2.html
+++ b/example/zapoterk2.html
@@ -16,7 +16,7 @@
     <a-entity light="type:ambient; intensity:0.5"></a-entity> <!-- and some ambient lighting -->
 
 
- <a-entity scale="0.1 0.1 0.1" look-controls="reverseMouseDrag:true" position="0 1 0" json-model="src: url(https://raw.githubusercontent.com/StoriaNum/workshops/gh-pages/example/models/js/68_700AM.js);">
+ <a-entity scale="0.1 0.1 0.1" look-controls="reverseMouseDrag:true" position="0 1 0" json-model="src: url(https://cdn.rawgit.com/KhronosGroup/glTF-Sample-Models/9176d098/1.0/Avocado/glTF/Avocado.gltf);">
 </a-entity>
     
     </a-scene>
