--- a/example/zw2.html
+++ b/example/zw2.html
@@ -2,9 +2,13 @@
 <!doctype html>
 <html>
 <head>
-  <title>So I heard millenials love Avocados...</title>
+  <title>...</title>
   <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
   <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
+  
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <script src="js/bootstrap.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 </head>
 <body>
