--- a/example/zw2.html
+++ b/example/zw2.html
@@ -8,10 +8,21 @@
   
   <link href="css/bootstrap.css" rel="stylesheet">
   <script src="js/bootstrap.js"></script>
+  <link href="css/example.css" rel="stylesheet">
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 </head>
 <body>
+  
+  
+               <div id="main-controls">
+              <a href="https://storianum.github.io/workshops/example/" class="btn btn-default btn-sm" id="new">
+              <span class="glyphicon glyphicon-refresh" title="Close Full Screen"></span>       <!-- Nuovo  -->
+              </a>
+	            </div>
+  
+
+  
   <a-scene>
     <!-- this is the "stage" of your 3D content -->
 
