--- a/example/zw2.html
+++ b/example/zw2.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   
-  
+  		<span class="mcright"><a href="storiablueblue" class="fontkaushan">storiabluee12345</a></span>&nbsp;
                <div id="main-controls">
               <a href="https://storianum.github.io/workshops/example/" class="btn btn-default btn-sm" id="new">
               <span class="glyphicon glyphicon-refresh" title="Close Full Screen"></span>       <!-- Nuovo  -->
