--- a/example/zw2.html
+++ b/example/zw2.html
@@ -2,14 +2,41 @@
 <!doctype html>
 <html>
 <head>
-  <title>...</title>
-  <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
-  <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
+
   
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <script src="js/bootstrap.js"></script>
-  <link href="css/example.css" rel="stylesheet">
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<title>Blueprint Esempio</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/example.css" rel="stylesheet">
+   
+
+    <!-- Make sure you've built blueprint3d.js -->
+    <!-- See README.md for details -->
+    <script src="js/blueprint3d.js"></script>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
+
+    <script src="js/items.js"></script>
+    
+    <script src="js/items_0mob.js"></script>
+    <script src="js/items_0.js"></script>  
+    <script src="js/items_1.js"></script>
+    <script src="js/items_2.js"></script>
+    <script src="js/items_3.js"></script>
+    <script src="js/items_4.js"></script>
+    <script src="js/items_5.js"></script>
+    
+    <script src="js/zcarxexample6.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="js/html2canvas.js"></script>
+<script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+<script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
+
 
 </head>
 <body>
