--- a/example/zw2ter.html
+++ b/example/zw2ter.html
@@ -123,6 +123,6 @@
     <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.1 0.1 0.1" position="0 1 0"></a-entity>
     </a-scene>  
   
-  
+  </div></div>
   
 </body></html>
