--- a/example/zprin.html
+++ b/example/zprin.html
@@ -54,21 +54,37 @@
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
 <span class="glyphicon glyphicon-screenshot" title="Salva immagine del progetto"></span>                  <!--  ImgJpg -->
 </a>  
-<script>
-  $('#save_image_locally').click(function(){
-    html2canvas($('#imagesave'), 
-    {
-      onrendered: function (canvas) {  
-       var a = document.createElement('a');
-        // toDataURL defaults to png, so we need to request a jpeg, then convert for file download.
-        a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
-        a.download = 'myfilename.jpg';
-        a.click();  
-   
-      }
-    });
-  });
-</script>
+
+<!-- First, include the Webcam.js JavaScript Library -->
+	<script type="text/javascript" src="https://raw.githubusercontent.com/jhuckaby/webcamjs/master/webcam.min.js"></script>
+	
+<!-- Configure a few settings and attach camera -->
+	<script>
+		Webcam.set({
+			width: device-width,
+			height: device-height,
+			image_format: 'jpeg',
+			jpeg_quality: 90
+		});
+		Webcam.attach( '#viewer' );
+	</script>
+		    
+        <script>
+
+	
+$('#save_image_locally').click(function(){
+	Webcam.snap( function(data_uri) {
+		
+		 var a = document.createElement('a');
+		  a.href = data_uri.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+                  a.download = 'myfilename.jpg';
+                  a.click();  
+
+			} );
+		}
+	
+	
+	</script>
               
 <!-- insert label storiablue with its own link                  
 
