Update and rename zlapis.html to zlatos.html

--- a/example/zlatos.html
+++ b/example/zlatos.html
@@ -109,7 +109,7 @@
   
   <div id="imagesave">
 
-  <a-scene>
+  <a-scene embedded>
     <!-- this is the "stage" of your 3D content -->
 
     <a-entity camera="" position="0 1.6 5"></a-entity> <!-- We move the camera around a bit -->
