--- a/example/zrombo.html
+++ b/example/zrombo.html
@@ -52,7 +52,7 @@
             
 
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
-<span class="glyphicon glyphicon-screenshot" title="Salva immagine del progetto" onclick="take_snapshot(); return false"></span>                <!--    ImgJpg -->
+<span class="glyphicon glyphicon-screenshot" title="Salva immagine del progetto" onclick="take_snapshot()"></span>                <!--    ImgJpg -->
 </a>
 
 <script language="JavaScript">
