--- a/example/zrombo.html
+++ b/example/zrombo.html
@@ -62,7 +62,7 @@
 			image_format: 'jpeg',
 			jpeg_quality: 90
 		});
-		Webcam.attach( '#my_camera' );
+		Webcam.attach( '#imagesave' );
 	</script>
   <script language="JavaScript">
 		function take_snapshot() {
