--- a/example/zw2qqs1.html
+++ b/example/zw2qqs1.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/example.css" rel="stylesheet">
+    <link href="css/examplemb.css" rel="stylesheet">
    
 
     <!-- Make sure you've built blueprint3d.js -->
