--- a/example/zzalert3.html
+++ b/example/zzalert3.html
@@ -1,25 +1,37 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>jQuery UI Slider - Snap to increments</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script>
+  $( function() {
+    $( "#slider" ).slider({
+      value:1,
+      min: 1,
+      max: 10,
+      step: 0.2,
+      slide: function( event, ui ) {
+        $( "#amount" ).val( "meters " + ui.value );
+      }
+    });
+    $( "#amount" ).val( "meters " + $( "#slider" ).slider( "value" ) );
+  } );
+  </script>
+</head>
 <body>
-
-<h2>JavaScript Prompt</h2>
-
-<button onclick="myFunction()">Try it</button>
-
-<p id="demo"></p>
-
-<script>
-function myFunction() {
-    var txt;
-    var distance = parseInt(prompt("Distance meters for object:", "1"));
-    if (distance == null || distance == "" || distance < 1 || distance > 10 || isNaN(distance) == true) {
-        txt = "User cancelled the prompt."; // invio distanza di 1 m
-    } else {
-        txt = "Hello " + distance + "! How are you today?"; // invio distanza specificata
-    }
-    document.getElementById("demo").innerHTML = txt;
-}
-</script>
-
+ 
+<p>
+  <label for="amount">Distance of item:</label>
+  <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+</p>
+ 
+<div id="slider"></div>
+ 
+ 
 </body>
 </html>
