--- a/example/zcarx23.html
+++ b/example/zcarx23.html
@@ -1,6 +1,6 @@
   <html><head>
 	  
-    
+    <meta name="viewport" content="width=device-width">
 	  
     <title>Blueprint Esempio</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
