--- a/example/ropter2.html
+++ b/example/ropter2.html
@@ -231,7 +231,7 @@
 
             <div id="main-controls">
               <a href="#" class="btn btn-default btn-sm" id="new">
-              <span class="glyphicon glyphicon-refresh" title="Nuovo Progetto"></span>       <!-- Nuovo  -->
+              <span class="glyphicon glyphicon-fullscreen" title="Nuovo Progetto"></span>       <!-- Nuovo  -->
               </a>
               
             
