--- a/example/newzaaabellate.html
+++ b/example/newzaaabellate.html
@@ -367,23 +367,7 @@
 	</div>
 
 
-
-  <a-scene>
-    <!-- this is the "stage" of your 3D content -->
-
-    <a-entity camera="" position="0 1.6 5"></a-entity> <!-- We move the camera around a bit -->
-    <a-entity light="type:directional;castShadow:true" position="0 10 0"></a-entity> <!-- Have a light shining down on our scene -->
-    <a-entity light="type:ambient; intensity:0.5"></a-entity> <!-- and some ambient lighting -->
-
-    <!-- we define our gltf model -->
-    <a-assets>
-      <a-asset-item id="avocado" src="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Box/glTF-Embedded/Box.gltf"></a-asset-item>
-    </a-assets>
-
-    <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>
-
- 
-    
-    </a-scene>
+<!-- nel seguito scrivere codice -->
+	
 </body>
 </html>
