--- a/example/newzaaabellate.html
+++ b/example/newzaaabellate.html
@@ -31,11 +31,30 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <script src="js/html2canvas.js"></script>
 
   <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
   <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
 
+	<!-- script posto in sezione head per barra distanza -->  
+  <script>
+  $( function() {
+    $( "#slider" ).slider({
+      value:1,
+      min: 1,
+      max: 10,
+      step: 0.2,
+      slide: function( event, ui ) {
+        $( "#amount" ).val( "metri " + ui.value );
+      }
+    });
+    $( "#amount" ).val( "metri " + $( "#slider" ).slider( "value" ) );
+  } );
+  </script>	  
+	  
+	  
+	  
        
   </head>
 
@@ -367,7 +386,16 @@
 	</div>
 
 
-<!-- nel seguito scrivere codice -->
+<p>
+  <label for="amount">Distanza di posizione dell&rsquo;arredo:</label>
+  <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+</p>
+ 
+<div id="slider"></div>
+	
+	
+	
+	
 	
 </body>
 </html>
