--- a/example/newzaaabellate1.html
+++ b/example/newzaaabellate1.html
@@ -31,30 +31,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <script src="js/html2canvas.js"></script>
 
   <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
   <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
 
-	<!-- script posto in sezione head per barra distanza -->  
-  <script>
-  $( function() {
-    $( "#slider" ).slider({
-      value:1,
-      min: 1,
-      max: 10,
-      step: 0.2,
-      slide: function( event, ui ) {
-        $( "#amount" ).val( "metri " + ui.value );
-      }
-    });
-    $( "#amount" ).val( "metri " + $( "#slider" ).slider( "value" ) );
-  } );
-  </script>	  
-	  
-	  
-	  
        
   </head>
 
@@ -386,16 +367,17 @@
 	</div>
 
 
-<p>
-  <label for="amount">Distanza di posizione dell&rsquo;arredo:</label>
-  <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
-</p>
+
+  <a-scene>
+    <!-- this is the "stage" of your 3D content -->
+
+    <a-entity camera="" position="0 1.6 5"></a-entity> <!-- We move the camera around a bit -->
+    <a-entity light="type:directional;castShadow:true" position="0 10 0"></a-entity> <!-- Have a light shining down on our scene -->
+    <a-entity light="type:ambient; intensity:0.5"></a-entity> <!-- and some ambient lighting -->
+
+   
  
-<div id="slider"></div>
-	
-	
-	
-	
-	
+    
+    </a-scene>
 </body>
 </html>
