--- a/example/newzaaabellate1.html
+++ b/example/newzaaabellate1.html
@@ -7,6 +7,7 @@
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/examplemb.css" rel="stylesheet">
+    
    
 
     <!-- Make sure you've built blueprint3d.js -->
@@ -375,9 +376,13 @@
     <a-entity light="type:directional;castShadow:true" position="0 10 0"></a-entity> <!-- Have a light shining down on our scene -->
     <a-entity light="type:ambient; intensity:0.5"></a-entity> <!-- and some ambient lighting -->
 
-   
+
+  <label for="amount">Distance of item:</label>
+  <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+
+  <div id="slider"></div>
  
     
-    </a-scene>
+   </a-scene>
 </body>
 </html>
