Update and rename newzaaabellate5.html to newzaaabellate6.html

--- a/example/newzaaabellate6.html
+++ b/example/newzaaabellate6.html
@@ -270,6 +270,7 @@
 		    
   <br><br><br>		    
   <p>
+  <span>L&rsquo;arredo selezionato &egrave;: <span id="context-menu-name"></span></span>	  
   <label for="amount">Distanza a cui porre l&rsquo;arredo:</label>
   <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
   </p>
