--- a/example/newzaaabellate7.html
+++ b/example/newzaaabellate7.html
@@ -269,8 +269,8 @@
 		
 		    
   <br><br><br>		    
-  <p>
-  <span>L&rsquo;arredo selezionato &egrave;: <span id="context-menu-name"></span></span>	  
+  <p>   <!--
+  <span>L&rsquo;arredo selezionato &egrave;: <span id="context-menu-name"></span></span><br>	   -->
   <label for="amount">Distanza a cui porre l&rsquo;arredo:</label>
   <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
   </p>
