Update and rename newzaaabellate7.html to newzaaabellate8.html

--- a/example/newzaaabellate8.html
+++ b/example/newzaaabellate8.html
@@ -274,8 +274,8 @@
   <label for="amount">Distanza a cui porre l&rsquo;arredo:</label>
   <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
   </p>
- 
-<div id="slider"></div>
+ <!--
+<div id="slider"></div>  -->
   
    <script>
   $( function() {
