Update and rename newzaaabellate8.html to newzaaabellate9.html

--- a/example/newzaaabellate9.html
+++ b/example/newzaaabellate9.html
@@ -271,8 +271,8 @@
   <br><br><br>		    
   <p>   <!--
   <span>L&rsquo;arredo selezionato &egrave;: <span id="context-menu-name"></span></span><br>	   -->
-  <label for="amount">Distanza a cui porre l&rsquo;arredo:</label>
-  <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+  <span for="amount">Distanza a cui porre l&rsquo;arredo:</span>
+  <span id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;"></span>
   </p>
  <!--
 <div id="slider"></div>  -->
