--- a/example/zktm1.html
+++ b/example/zktm1.html
@@ -376,5 +376,6 @@
     <a-entity light="type:ambient; intensity:0.5"></a-entity> <!-- and some ambient lighting -->
 
 
+    </a-scene>
 </body>
 </html>
