Update and rename zktm3.html to zktm4.html

--- a/example/zktm4.html
+++ b/example/zktm4.html
@@ -377,9 +377,11 @@
 
     <!-- we define our gltf model -->
     <a-assets>
-  </a-assets>
+      <a-asset-item id="avocado" src=""></a-asset-item>
+    </a-assets>
 
-   
+    <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>
+
  
     
     </a-scene>
