Update and rename zktm11.html to zktm12.html

--- a/example/zktm12.html
+++ b/example/zktm12.html
@@ -271,14 +271,14 @@
 		    
 
 <br><br><br>
-<h4>Seleziona la distanza arredo</h4>		    
+<h4>Seleziona la distanza dell&rsquo;arredo in metri</h4>		    
 <p id="distanzaitemcam"></p>
 <br>
 <select id="ddlViewBy" onchange="changeFunc();">
   <option value="0">Seleziona</option>
-  <option value="1">test1</option>
-  <option value="2">test2</option>
-  <option value="3">test3</option>
+  <option value="1">1 m</option>
+  <option value="2">2 m</option>
+  <option value="3">3 m</option>
 </select>
 		    
 <script>
