--- a/example/zktm12.html
+++ b/example/zktm12.html
@@ -271,7 +271,7 @@
 		    
 
 <br><br><br>
-<h4>Seleziona la distanza dell&rsquo;arredo in metri</h4>		    
+<h4 style="color:green">Seleziona la distanza dell&rsquo;arredo in metri</h4>		    
 <p id="distanzaitemcam"></p>
 <br>
 <select id="ddlViewBy" onchange="changeFunc();">
